--- a/MoviesDB/app/build.gradle
+++ b/MoviesDB/app/build.gradle
@@ -39,5 +39,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+
+    implementation 'com.github.takusemba:multisnaprecyclerview:1.3.3'
+
     implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
 }
